Fix bg overflow

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -3,6 +3,12 @@
     src: url('./font/wt009.ttf');
 }
 
+html,
+body {
+    height: 100vh;
+    width: 100vw;
+}
+
 h1,
 h2,
 p {
